@@ -664,44 +664,11 @@ public class PropertiesGenerator
   {
     String suffix = ("root".equals(locale)) ? "" : "_" + locale;
     o.println("# LocaleInformation" + suffix + ".properties --");
-    o.println("# Copyright (C) 2005  Free Software Foundation, Inc.");
+    o.println("# Copyright (C) 1991-2005 Unicode, Inc.");
+    o.println("# All rights reserved. Distributed under the Terms of Use");
+    o.println("# in http://www.unicode.org/copyright.html.");
     o.println("#");
-    o.println("# This file is part of GNU Classpath.");
-    o.println("#");
-    o.println("# GNU Classpath is free software; you can redistribute it and/or modify");
-    o.println("# it under the terms of the GNU General Public License as published by");
-    o.println("# the Free Software Foundation; either version 2, or (at your option)");
-    o.println("# any later version.");
-    o.println("#");
-    o.println("# GNU Classpath is distributed in the hope that it will be useful, but");
-    o.println("# WITHOUT ANY WARRANTY; without even the implied warranty of");
-    o.println("# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU");
-    o.println("# General Public License for more details.");
-    o.println("#");
-    o.println("# You should have received a copy of the GNU General Public License");
-    o.println("# along with GNU Classpath; see the file COPYING.  If not, write to the");
-    o.println("# Free Software Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA");
-    o.println("# 02111-1307 USA.");
-    o.println("#");
-    o.println("# Linking this library statically or dynamically with other modules is");
-    o.println("# making a combined work based on this library.  Thus, the terms and");
-    o.println("# conditions of the GNU General Public License cover the whole");
-    o.println("# combination.");
-    o.println("#");
-    o.println("# As a special exception, the copyright holders of this library give you");
-    o.println("# permission to link this library with independent modules to produce an");
-    o.println("# executable, regardless of the license terms of these independent");
-    o.println("# modules, and to copy and distribute the resulting executable under");
-    o.println("# terms of your choice, provided that you also meet, for each linked");
-    o.println("# independent module, the terms and conditions of the license of that");
-    o.println("# module.  An independent module is a module which is not derived from");
-    o.println("# or based on this library.  If you modify this library, you may extend");
-    o.println("# this exception to your version of the library, but you are not");
-    o.println("# obligated to do so.  If you do not wish to do so, delete this");
-    o.println("# exception statement from your version. */");
-    o.println("#");
-    o.println("#");
-    o.println("# This file was automatically generated by gnu.localegen from LDML");
+    o.println("# This file was automatically generated by gnu.localegen from CLDR.");
     o.println();
   }
 
